--- a/templates/home.html
+++ b/templates/home.html
@@ -5,9 +5,27 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>welcome</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 
+  <div class="header">
+      <div>CATRAVEL</div>
+    </div>
+    <div class="login-title">LOGIN</div>
+    <form action="login.php" method="post" class="loginpage">
+        <?php if (isset($_GET['error'])) { ?>
+            <p class="error"><?php echo $_GET['error']; ?></p>
+        <?php } ?>
+        <label>Username :</label><br>
+        <input type="text" name="uname" placeholder="Username"><br>
+        <label>Password : </label><br>
+        <input type="password" name="password" placeholder="Password"><br> 
+        <button type="submit" class="loginbtn">Login</button>
+    </form>
+    <div class="footer">
+      <h2>ENJOY YOURSELF</h2>
+    </div>
 
   
 </body>
